--- a/index.html
+++ b/index.html
@@ -21,18 +21,52 @@
 </head>
 
 <body>
-  <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-    <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none;" id="mySidebar">
+    <ul class="navbar-nav" style="align-items: center; text-align: center;">
+      <img src="./images/crest.png" alt=""><br>
+      <li class="nav-item " style="margin:0; padding:0">
+        <a class="nav-link " href="#">Home</a>
+      </li>
+      <li class="nav-item " style="margin:0; padding:0">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item" style="margin:0; padding:0">
+        <a class="nav-link" href="#">Courses</a>
+      </li>
+      <li class="nav-item" style="margin:0; padding:0">
+        <a class="nav-link" href="#">Blog</a>
+      </li>
+      <li class="nav-item" style="margin:0; padding:0">
+        <a class="nav-link" href="#">Shop</a>
+      </li>
+      <li class="nav-item" style="margin:0; padding:0">
+        <a class="nav-link hanh" href="#">Elements</a>
+      </li>
+      <br>
+      <li class="nav-item-button" style="margin:0; padding:0">
+        <a href="#" style="text-decoration: none; ">
+          <button class="btn_header"><i class="fas fa-phone"></i>(+1) 555
+            234-8765</button>
+        </a>
+      </li>
+
+      <li class="nav-item-icon">
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </li>
+    </ul>
   </div>
 
-  <div id="main">
+  <div id="main" style="transition: transform 0.5s cubic-bezier(.230,1,.320,1);">
     <div class="wrap_1">
 
       <div class="header_sidebar">
-        <button id="openNav" class=" header_sidebar w3-xxlarge " onclick="w3_open()">&#9776;</button>
+        <button id="openNav" class="sidebar-button w3-xxlarge " style="display: inline-block !important;" onclick="w3_open()">&#9776;</button>
+        <button id="closeNav" class="sidebar-button w3-xxlarge" style="display: none !important;" onclick="w3_close()">&times;</button>
+        <img src="./images/crest.png" alt="" id="icon_h">
+
       </div>
 
       <div class="header_navbar gutter" id="site-header">
@@ -279,19 +313,7 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script>
-    function w3_open() {
-      document.getElementById("main").style.marginLeft = "25%";
-      document.getElementById("mySidebar").style.width = "25%";
-      document.getElementById("mySidebar").style.display = "block";
-      document.getElementById("openNav").style.display = 'none';
-    }
-    function w3_close() {
-      document.getElementById("main").style.marginLeft = "0%";
-      document.getElementById("mySidebar").style.display = "none";
-      document.getElementById("openNav").style.display = "inline-block";
-    }
-  </script>
+  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -301,6 +323,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
