--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="stop-scrolling">
-  <div class="header_navbar gutter w3-card " id="mySidebar"  >
+  <div class="header_navbar gutter w3-card " id="mySidebar">
     <div class="navbar navbar-nav-fix">
       <nav class="container-fluid port">
         <!-- Brand -->
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div id="main"  >
+  <div id="main">
     <div class="wrap_1 ">
 
       <div class="header_sidebar">
@@ -95,7 +95,7 @@
 
 
       <section class="section_1">
-        <img src="./images/yellow_top_wave_01.png" alt="" >
+        <img src="./images/yellow_top_wave_01.png" alt="">
       </section>
 
       <div class="Content_1">
@@ -106,23 +106,23 @@
               <h1>The language teaching experts</h1>
             </div>
             <div class="col-lg-6 col-md-12">
-              <img src="./images/hero_team.png" alt="" >
+              <img src="./images/hero_team.png" alt="">
             </div>
           </div>
         </div>
       </div>
 
       <section class="section_2">
-        <img src="./images/Violet_top_left_wave.png" alt="" >
+        <img src="./images/Violet_top_left_wave.png" alt="">
       </section>
     </div>
 
 
     <div class="wrap_2">
       <div class="service_content text-center py-5">
-        <div class="container" style="z-index: 55; position: relative;">
-          <div class="row" style="justify-content: center;">
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
+        <div class="container">
+          <div class="row" style="justify-content: center;" id="listProduct">
+            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
               <div class="bg_item">
                 <img src="./images/teacher_1.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
                 <div class="item_thumb">
@@ -131,8 +131,8 @@
                   <p>A new normal that has evolved from generation X.</p>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
+            </div> -->
+            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
               <div class="bg_item">
                 <img src="./images/teacher_2.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
                 <div class="item_thumb">
@@ -141,8 +141,8 @@
                   <p>A new normal that has evolved from generation X.</p>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
+            </div> -->
+            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
               <div class="bg_item">
                 <img src="./images/teacher_3.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
                 <div class="item_thumb">
@@ -151,8 +151,8 @@
                   <p>A new normal that has evolved from generation X.</p>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
+            </div> -->
+            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
               <div class="bg_item">
                 <img src="./images/teacher_4.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
                 <div class="item_thumb">
@@ -161,10 +161,9 @@
                   <p>A new normal that has evolved from generation X.</p>
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
 
-          <div class="row" style="justify-content: center; ">
+<!-- 
             <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
               <div class="bg_item">
                 <img src="./images/teacher_5.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
@@ -204,7 +203,7 @@
                   <p>A new normal that has evolved from generation X.</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <section class="section_3">
@@ -271,7 +270,7 @@
         </div>
       </div>
       <section class="section_4">
-        <img src="./images/accent_bottom_wave_01.png" alt="" >
+        <img src="./images/accent_bottom_wave_01.png" alt="">
       </section>
     </div>
     <footer></footer>
@@ -290,6 +289,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
+    integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="./index.js"></script>
   <script src="./main.js"></script>
 </body>
 
