--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <nav class="container-fluid port">
         <!-- Brand -->
         <div class="Crest">
-          <a class="navbar-brand d-flex align-items-center" href="#" style="float: left;">
-            <img class="img-fluid" src="./images/crest.png" alt="">
+          <a class="navbar-brand d-flex align-items-center" href="#" style="float: left; width: 200px;">
+            <img class="img-fluid" src="./images/crest.png" alt="" id="offImg">
           </a>
         </div>
 
         <!-- Navbar links -->
-        <nav class="navbar nav-text" id="collapsibleNavbar" style="justify-content: flex-end;">
+        <nav class="navbar nav-text" id="collapsibleNavbar" >
           <ul class="navbar-nav" style="align-items: center">
             <li class="nav-item ">
               <a class="nav-link " href="#">Home</a>
