--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <!-- Navbar links -->
-        <nav class="navbar nav-text" id="collapsibleNavbar" >
+        <nav class="navbar nav-text" id="collapsibleNavbar">
           <ul class="navbar-nav" style="align-items: center">
             <li class="nav-item ">
               <a class="nav-link " href="#">Home</a>
@@ -122,88 +122,7 @@
       <div class="service_content text-center py-5">
         <div class="container">
           <div class="row" style="justify-content: center;" id="listProduct">
-            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_1.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_2.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_3.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_4.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div> -->
-
-<!-- 
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_5.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_6.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_7.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12 text-center align-items-center px-3 py-3">
-              <div class="bg_item">
-                <img src="./images/teacher_8.jpg" alt="" style="width: 100%; border-radius: 15px 15px 0 0">
-                <div class="item_thumb">
-                  <p>RUSSIAN</p>
-                  <h2>John Doe</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div> -->
+            <!-- /////////API_PART///////////////////// -->
           </div>
         </div>
         <section class="section_3">
@@ -273,7 +192,97 @@
         <img src="./images/accent_bottom_wave_01.png" alt="">
       </section>
     </div>
-    <footer></footer>
+
+    <footer>
+      <div class="footer_content text-center">
+        <div class="max_legt">
+          <div class="row">
+            <div class="col-xl-3 col-sm-6 col-12 align-items-center">
+              <div class="footer_item1 text-white text-left ">
+                <h5>Contact us</h5>
+                <div class="footer_text"><i class="fas fa-map-marker-alt"></i>&nbsp; Franklin St, Greenpoint Ave</div>
+                <div class="footer_text"><i class="fas fa-phone"></i>&nbsp; +2342 5446 67</div>
+                <div class="footer_text"><i class="fas fa-clock"></i>&nbsp; Monday - Friday: 8 AM - 5 PM</div>
+                <div class="footer_text">
+                  <ul class="footer_ul" style="align-items: center">
+                    <li class="footer_icon">
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="footer_icon">
+                      <a href="#"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li class="footer_icon">
+                      <a href="#"><i class="fab fa-youtube"></i></a>
+                    </li>
+                    <li class="footer_icon">
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12 align-items-center ">
+              <div class="footer_item2 text-white text-left">
+                <h5>Quick Links</h5>
+                <ul class="footer_ul" style="align-items: center">
+                  <li class="footer_icon">
+                    <a href="#">Home</a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Courses</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Schedule</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Blog</i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12 align-items-center ">
+              <div class="footer_item2 text-white text-left">
+                <h5>About</h5>
+                <ul class="footer_ul" style="align-items: center">
+                  <li class="footer_icon">
+                    <a href="#">Home</a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Courses</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Schedule</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Blog</i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-12 align-items-center ">
+              <div class="footer_item4 text-white text-left">
+                <h5>Newsletter</h5>
+                <ul class="footer_ul" style="align-items: center">
+                  <li class="footer_icon">
+                    <a href="#">Home</a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Courses</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Schedule</i></a>
+                  </li>
+                  <li class="footer_icon">
+                    <a href="#">Blog</i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </footer>
 
   </div>
 
